--- a/packages/earth-cli/core/core/package.json
+++ b/packages/earth-cli/core/core/package.json
@@ -30,9 +30,19 @@
     "url": "https://github.com/wangxv/study/issues"
   },
   "dependencies": {
-    "@earth-cli/utils": "file:../../utils/utils",
     "@earth-cli/log": "file:../../utils/log",
+    "@earth-cli/utils": "file:../../utils/utils",
+    "dotenv": "^10.0.0",
+    "@earth-cli/get-npm-info": "file:../../utils/get-npm-info",
     "import-local": "^3.0.3",
-    "npmlog": "^5.0.1"
+    "minimist": "^1.2.5",
+    "npmlog": "^5.0.1",
+    "path-exists": "^4.0.0",
+    "root-check": "^1.0.0",
+    "user-home": "^3.0.0"
+  },
+  "devDependencies": {
+    "colors": "^1.4.0",
+    "semver": "^7.3.5"
   }
 }
