--- a/packages/yargs-cli/package.json
+++ b/packages/yargs-cli/package.json
@@ -7,14 +7,25 @@
     "yargs-cli": "bin/index.js"
   },
   "scripts": {
+    "build": "webpack",
+    "dev": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "wangxv",
   "license": "ISC",
   "dependencies": {
+    "commander": "^8.2.0",
+    "path-exists": "^5.0.0",
     "yargs": "^17.2.1"
   },
   "devDependencies": {
-    "dedent": "^0.7.0"
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/runtime-corejs3": "^7.15.4",
+    "babel-loader": "^8.2.2",
+    "dedent": "^0.7.0",
+    "webpack": "^5.59.0",
+    "webpack-cli": "^4.9.1"
   }
 }
