--- a/packages/earth-cli/core/cli/package.json
+++ b/packages/earth-cli/core/cli/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@earth-cli/core",
+  "name": "@earth-cli/cli",
   "version": "1.0.0",
-  "description": "earth-cli core",
+  "description": "earth-cli cli",
   "author": "wangxuke <1564442827@qq.com>",
-  "homepage": "https://github.com/wangxv/study/tree/main/packages/core#readme",
+  "homepage": "https://github.com/wangxv/study/tree/main/packages/core/cli#readme",
   "license": "ISC",
-  "main": "lib/core.js",
+  "main": "lib/index.js",
   "bin": {
     "earth-cli": "bin/index.js"
   },
@@ -30,13 +30,14 @@
     "url": "https://github.com/wangxv/study/issues"
   },
   "dependencies": {
+    "@earth-cli/exec": "file:../exec",
     "@earth-cli/get-npm-info": "file:../../utils/get-npm-info",
+    "@earth-cli/init": "file:../../commands/init",
     "@earth-cli/log": "file:../../utils/log",
     "@earth-cli/utils": "file:../../utils/utils",
     "commander": "^8.2.0",
     "dotenv": "^10.0.0",
     "import-local": "^3.0.3",
-    "minimist": "^1.2.5",
     "npmlog": "^5.0.1",
     "path-exists": "^4.0.0",
     "root-check": "^1.0.0",
