脚手架初步完成

--- a/packages/earth-cli/commands/init/package.json
+++ b/packages/earth-cli/commands/init/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/wangxv/study/issues"
   },
   "dependencies": {
-    "@earth-cli/command": "file:../../models/command"
+    "@earth-cli/command": "file:../../models/command",
+    "@earth-cli/log": "file:../../utils/log"
   }
 }
