--- a/packages/yargs-cli/package.json
+++ b/packages/yargs-cli/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^8.2.0",
+    "inquirer": "^8.2.0",
     "npminstall": "^4.10.0",
     "path-exists": "^5.0.0",
     "user-home": "^3.0.0",
