--- a/packages/yargs-cli/package.json
+++ b/packages/yargs-cli/package.json
@@ -14,8 +14,11 @@
   "author": "wangxv",
   "license": "ISC",
   "dependencies": {
+    "ansi-escapes": "^4.0.0",
     "commander": "^8.2.0",
+    "ejs": "^3.1.6",
     "inquirer": "^8.2.0",
+    "mute-stream": "0.0.8",
     "npminstall": "^4.10.0",
     "path-exists": "^5.0.0",
     "user-home": "^3.0.0",
