下载模板, 安装模板, 安装依赖,启动项目

--- a/packages/earth-cli/core/exec/package.json
+++ b/packages/earth-cli/core/exec/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@earth-cli/package": "file:../../models/package",
-    "@earth-cli/log": "file:../../utils/log"
+    "@earth-cli/log": "file:../../utils/log",
+    "@earth-cli/utils": "file:../../utils/utils"
   }
 }
