--- a/packages/earth-cli-template/earth-cli-template-vue2/template/package.json
+++ b/packages/earth-cli-template/earth-cli-template-vue2/template/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-test",
-  "version": "1.0.0",
+  "name": "<%= className %>",
+  "version": "<%= version %>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
