--- a/packages/earth-cli/commands/init/package.json
+++ b/packages/earth-cli/commands/init/package.json
@@ -32,8 +32,11 @@
     "@earth-cli/package": "file:../../models/package",
     "@earth-cli/request": "file:../../utils/request",
     "@earth-cli/utils": "file:../../utils/utils",
+    "ejs": "^3.1.6",
     "fs-extra": "^10.0.0",
+    "glob": "^7.2.0",
     "inquirer": "^8.2.0",
+    "kebab-case": "^1.0.1",
     "semver": "^7.3.5",
     "user-home": "^3.0.0"
   }
