--- a/packages/yargs-cli/package.json
+++ b/packages/yargs-cli/package.json
@@ -17,6 +17,7 @@
     "ansi-escapes": "^4.0.0",
     "commander": "^8.2.0",
     "ejs": "^3.1.6",
+    "glob": "^7.2.0",
     "inquirer": "^8.2.0",
     "mute-stream": "0.0.8",
     "npminstall": "^4.10.0",
