--- a/packages/umi-plugins/package.json
+++ b/packages/umi-plugins/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mkdirp": "^1.0.4",
     "mustache": "^4.2.0",
-    "tapable": "^2.2.1"
+    "tapable": "^2.2.1",
+    "webpack": "^5.64.2"
   }
 }
