--- a/packages/nest-project/package.json
+++ b/packages/nest-project/package.json
@@ -32,8 +32,11 @@
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/typeorm": "^8.0.2",
     "bull": "^4.1.1",
+    "mysql2": "^2.3.3",
     "nest-status-monitor": "^0.1.4",
     "nestjs-config": "^1.4.10",
+    "nodemailer": "^6.7.1",
+    "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
