--- a/three.js/base-3d/package.json
+++ b/three.js/base-3d/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tensorflow-img",
+  "name": "base-3d",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,18 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^6.0.1",
-    "@tensorflow-models/hand-pose-detection": "0.0.1",
-    "@tensorflow-models/mobilenet": "^2.1.0",
-    "@tensorflow/tfjs": "^3.13.0",
-    "ant-design-vue": "^2.2.8",
     "core-js": "^3.8.3",
-    "i": "^0.3.7",
-    "npm": "^8.5.2",
-    "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "less-loader": "^10.2.0",
+    "three": "^0.138.2",
+    "vue": "^2.6.14",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -32,13 +28,12 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "babel-plugin-import": "^1.13.3",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
-    "typescript": "~4.5.5"
+    "less": "^4.1.2",
+    "typescript": "~4.5.5",
+    "vue-template-compiler": "^2.6.14"
   }
 }
